# learn-k8s-sdk

./: README.md
python/: .gitignore  README.md  setup.cfg  setup.py
python/k8s_configer/: app.yaml  compare_max_surge_plot.py  k8s_configer.py  plot.py  test_scaling_cost.py  test_scaling_cost_plot.py  utils.py
python/k8s_configer/app/: busybox-maxSurge-100-maxUnavailable-25.yaml  busybox.yaml  nginx-maxSurge-100-maxUnavailable-25.yaml  nginx.yaml
python/k8s_configer/results/: 2022-11-17-11-53-52-scaling-cost.csv  2022-11-17-17-39-49-scaling-cost.csv.txt  2022-11-17-17-46-29-scaling-cost.csv.txt  2022-11-17-17-52-25-scaling-cost.csv.txt  2022-11-17-17-53-39-scaling-cost.csv.txt  2022-11-17-17-53-56-scaling-cost.csv.txt  2022-11-17-17-55-44-scaling-cost.csv  2022-11-17-17-55-44-scaling-cost.csv.txt  2022-11-17-20-39-45-scaling-cost.csv  2022-11-17-20-39-45-scaling-cost.csv.txt  2022-11-21-11-20-53-scaling-cost.csv.txt  2022-11-21-11-21-18-scaling-cost.csv  2022-11-21-11-21-18-scaling-cost.csv.txt  2022-11-23-23-42-22-scaling-cost.csv.txt  2022-11-23-23-43-07-scaling-cost.csv  2022-11-23-23-43-07-scaling-cost.csv.txt  2022-11-24-11-13-56-scaling-cost.csv.txt  2022-11-24-11-31-24-scaling-cost.csv.txt  2022-11-24-12-56-17-scaling-cost.csv.txt  2022-11-24-14-00-02-scaling-cost.csv.txt  2022-11-24-16-18-06-scaling-cost.csv.txt  2022-11-30-22-52-09-scaling-cost.csv  2022-11-30-22-52-09-scaling-cost.csv.txt  2022-12-01-15-41-18-scaling-cost.csv.txt  2022-12-01-15-41-34-scaling-cost.csv.txt  2022-12-05-15-08-49-scaling-cost.csv.txt  (+21 more)
python/src/: app.yaml  k8s_configer.py
