[metadata]
name = k8s_configer
version = 0.1
author = wenzhaojie
long_description = file: README.md
license = MIT
url = https://github.com/wenzhaojie/learn-k8s-sdk
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = kubernetes